docs & style: eliminate FQN references and update pool documentation