@@ -22,10 +22,7 @@ import net.dv8tion.jda.api.entities.channel.middleman.GuildChannel;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.entities.channel.unions.MessageChannelUnion;
 import net.dv8tion.jda.api.exceptions.InsufficientPermissionException;
-import net.dv8tion.jda.api.requests.Request;
-import net.dv8tion.jda.api.requests.Response;
-import net.dv8tion.jda.api.requests.RestAction;
-import net.dv8tion.jda.api.requests.Route;
+import net.dv8tion.jda.api.requests.*;
 import net.dv8tion.jda.api.utils.MiscUtil;
 import net.dv8tion.jda.api.utils.TimeUtil;
 import net.dv8tion.jda.api.utils.data.DataArray;
@@ -35,39 +32,40 @@ import net.dv8tion.jda.internal.entities.EntityBuilder;
 import net.dv8tion.jda.internal.requests.RestActionImpl;
 import net.dv8tion.jda.internal.utils.Checks;
 import net.dv8tion.jda.internal.utils.JDALogger;
-import org.apache.commons.collections4.map.ListOrderedMap;
 import org.jetbrains.annotations.Unmodifiable;
 import org.slf4j.Logger;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
 
 import javax.annotation.CheckReturnValue;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
 /**
- * Represents an access point to the {@link net.dv8tion.jda.api.entities.Message Message} history of a
- * {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel MessageChannel}.
+ * Represents an access point to the {@link Message} history of a
+ * {@link MessageChannel}.
  * <br><b>Note:</b> Message order is always in recent to past order. I.e: A message at index 0
  * of a list is more recent than a message at index 1.
  *
- * @see net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistory()
- * @see net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAfter(String, int)
- * @see net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryBefore(String, int)
- * @see net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAround(String, int)
- * @see net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryFromBeginning(int)
+ * @see MessageChannel#getHistory()
+ * @see MessageChannel#getHistoryAfter(String, int)
+ * @see MessageChannel#getHistoryBefore(String, int)
+ * @see MessageChannel#getHistoryAround(String, int)
+ * @see MessageChannel#getHistoryFromBeginning(int)
  */
 public class MessageHistory {
     protected final MessageChannel channel;
     protected static final Logger LOG = JDALogger.getLog(MessageHistory.class);
 
-    protected final ListOrderedMap<Long, Message> history = new ListOrderedMap<>();
+    protected final LinkedHashMap<Long, Message> history = new LinkedHashMap<>();
 
     /**
      * Creates a new MessageHistory object.
      *
      * @param  channel
-     *         The {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel MessageChannel} to retrieval history from.
+     *         The {@link MessageChannel} to retrieval history from.
      */
     public MessageHistory(@Nonnull MessageChannel channel) {
         Checks.notNull(channel, "Channel");
@@ -94,7 +92,7 @@ public class MessageHistory {
     }
 
     /**
-     * The amount of retrieved {@link net.dv8tion.jda.api.entities.Message Messages}
+     * The amount of retrieved {@link Message Messages}
      * by this MessageHistory.
      * <br>This returns {@code 0} until any call to retrieve messages has completed.
      * See {@link #retrievePast(int)} and {@link #retrieveFuture(int)}!
@@ -115,7 +113,7 @@ public class MessageHistory {
     }
 
     /**
-     * Returns the {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel MessageChannel} that this MessageHistory
+     * Returns the {@link MessageChannel} that this MessageHistory
      * is related to.
      *
      * @return The MessageChannel of this history.
@@ -132,13 +130,13 @@ public class MessageHistory {
      * <br>This method has 2 modes of operation: initial retrieval and additional retrieval.
      * <ul>
      *     <li><b>Initial Retrieval</b>
-     *     <br>This mode is what is used when no {@link net.dv8tion.jda.api.entities.Message Messages} have been retrieved
+     *     <br>This mode is what is used when no {@link Message Messages} have been retrieved
      *         yet ({@link #getRetrievedHistory()}'s size is 0). Initial retrieval starts from the most recent message sent
      *         to the channel and retrieves backwards from there. So, if 50 messages are retrieved during this mode, the
      *         most recent 50 messages will be retrieved.</li>
      *
      *     <li><b>Additional Retrieval</b>
-     *     <br>This mode is used once some {@link net.dv8tion.jda.api.entities.Message Messages} have already been retrieved
+     *     <br>This mode is used once some {@link Message Messages} have already been retrieved
      *         from Discord and are stored in MessageHistory's history ({@link #getRetrievedHistory()}). When retrieving
      *         messages in this mode, MessageHistory will retrieve previous messages starting from the oldest message
      *         stored in MessageHistory.
@@ -146,33 +144,33 @@ public class MessageHistory {
      *         retrieve the <i>next</i> 10 messages, starting from the oldest message of the 10 previously retrieved messages.</li>
      * </ul>
      * <p>
-     * Possible {@link net.dv8tion.jda.api.requests.ErrorResponse ErrorResponses} include:
+     * Possible {@link ErrorResponse ErrorResponses} include:
      * <ul>
-     *     <li>{@link net.dv8tion.jda.api.requests.ErrorResponse#UNKNOWN_MESSAGE UNKNOWN_MESSAGE}
+     *     <li>{@link ErrorResponse#UNKNOWN_MESSAGE UNKNOWN_MESSAGE}
      *     <br>Can occur if retrieving in Additional Mode and the Message being used as the marker for the last retrieved
      *         Message was deleted. Currently, to fix this, you need to create a new
-     *         {@link net.dv8tion.jda.api.entities.MessageHistory MessageHistory} instance.</li>
+     *         {@link MessageHistory} instance.</li>
      *
-     *     <li>{@link net.dv8tion.jda.api.requests.ErrorResponse#MISSING_ACCESS MISSING_ACCESS}
+     *     <li>{@link ErrorResponse#MISSING_ACCESS MISSING_ACCESS}
      *     <br>Can occur if the request for history retrieval was executed <i>after</i> JDA lost access to the Channel,
-     *         typically due to the account being removed from the {@link net.dv8tion.jda.api.entities.Guild Guild}.</li>
+     *         typically due to the account being removed from the {@link Guild}.</li>
      *
-     *     <li>{@link net.dv8tion.jda.api.requests.ErrorResponse#MISSING_PERMISSIONS MISSING_PERMISSIONS}
+     *     <li>{@link ErrorResponse#MISSING_PERMISSIONS MISSING_PERMISSIONS}
      *     <br>Can occur if the request for history retrieval was executed <i>after</i> JDA lost the
-     *         {@link net.dv8tion.jda.api.Permission#MESSAGE_HISTORY} permission.</li>
+     *         {@link Permission#MESSAGE_HISTORY} permission.</li>
      *
-     *     <li>{@link net.dv8tion.jda.api.requests.ErrorResponse#UNKNOWN_CHANNEL UNKNOWN_CHANNEL}
+     *     <li>{@link ErrorResponse#UNKNOWN_CHANNEL UNKNOWN_CHANNEL}
      *     <br>The send request was attempted after the channel was deleted.</li>
      * </ul>
      *
      * @param  amount
-     *         The amount of {@link net.dv8tion.jda.api.entities.Message Messages} to retrieve.
+     *         The amount of {@link Message Messages} to retrieve.
      *
-     * @throws java.lang.IllegalArgumentException
+     * @throws IllegalArgumentException
      *         The the {@code amount} is less than {@code 1} or greater than {@code 100}.
      *
-     * @return {@link net.dv8tion.jda.api.requests.RestAction RestAction} -
-     *         Type: {@link java.util.List List}{@literal <}{@link net.dv8tion.jda.api.entities.Message Message}{@literal >}
+     * @return {@link RestAction} -
+     *         Type: {@link List}{@literal <}{@link Message}{@literal >}
      *         <br>Retrieved Messages are placed in a List and provided in order of most recent to oldest with most recent
      *         starting at index 0. If the list is empty, there were no more messages left to retrieve.
      */
@@ -190,7 +188,8 @@ public class MessageHistory {
                 .withQueryParams("limit", Integer.toString(amount));
 
         if (!history.isEmpty()) {
-            route = route.withQueryParams("before", String.valueOf(history.lastKey()));
+            route = route.withQueryParams(
+                    "before", String.valueOf(history.lastEntry().getKey()));
         }
 
         JDAImpl jda = (JDAImpl) getJDA();
@@ -219,38 +218,38 @@ public class MessageHistory {
      * using something like {@link MessageChannel#getHistoryAround(String, int)}.
      * <br>This method works in the same way as {@link #retrievePast(int)}'s Additional Retrieval mode.
      * <p>
-     * <b>Note:</b> This method can only be used after {@link net.dv8tion.jda.api.entities.Message Messages} have already
+     * <b>Note:</b> This method can only be used after {@link Message Messages} have already
      * been retrieved from Discord.
      * <p>
-     * Possible {@link net.dv8tion.jda.api.requests.ErrorResponse ErrorResponses} include:
+     * Possible {@link ErrorResponse ErrorResponses} include:
      * <ul>
-     *     <li>{@link net.dv8tion.jda.api.requests.ErrorResponse#UNKNOWN_MESSAGE UNKNOWN_MESSAGE}
+     *     <li>{@link ErrorResponse#UNKNOWN_MESSAGE UNKNOWN_MESSAGE}
      *     <br>Can occur if retrieving in Additional Mode and the Message being used as the marker for the last retrieved
      *         Message was deleted. Currently, to fix this, you need to create a new
-     *         {@link net.dv8tion.jda.api.entities.MessageHistory MessageHistory} instance.</li>
+     *         {@link MessageHistory} instance.</li>
      *
-     *     <li>{@link net.dv8tion.jda.api.requests.ErrorResponse#MISSING_ACCESS MISSING_ACCESS}
+     *     <li>{@link ErrorResponse#MISSING_ACCESS MISSING_ACCESS}
      *     <br>Can occur if the request for history retrieval was executed <i>after</i> JDA lost access to the Channel,
-     *         typically due to the account being removed from the {@link net.dv8tion.jda.api.entities.Guild Guild}.</li>
+     *         typically due to the account being removed from the {@link Guild}.</li>
      *
-     *     <li>{@link net.dv8tion.jda.api.requests.ErrorResponse#MISSING_PERMISSIONS MISSING_PERMISSIONS}
+     *     <li>{@link ErrorResponse#MISSING_PERMISSIONS MISSING_PERMISSIONS}
      *     <br>Can occur if the request for history retrieval was executed <i>after</i> JDA lost the
-     *         {@link net.dv8tion.jda.api.Permission#MESSAGE_HISTORY} permission.</li>
+     *         {@link Permission#MESSAGE_HISTORY} permission.</li>
      *
-     *     <li>{@link net.dv8tion.jda.api.requests.ErrorResponse#UNKNOWN_CHANNEL UNKNOWN_CHANNEL}
+     *     <li>{@link ErrorResponse#UNKNOWN_CHANNEL UNKNOWN_CHANNEL}
      *     <br>The send request was attempted after the channel was deleted.</li>
      * </ul>
      *
      * @param  amount
-     *         The amount of {@link net.dv8tion.jda.api.entities.Message Messages} to retrieve.
+     *         The amount of {@link Message Messages} to retrieve.
      *
-     * @throws java.lang.IllegalArgumentException
+     * @throws IllegalArgumentException
      *         The the {@code amount} is less than {@code 1} or greater than {@code 100}.
-     * @throws java.lang.IllegalStateException
+     * @throws IllegalStateException
      *         If no messages have been retrieved by this MessageHistory.
      *
-     * @return {@link net.dv8tion.jda.api.requests.RestAction RestAction} -
-     *         Type: {@link java.util.List List}{@literal <}{@link net.dv8tion.jda.api.entities.Message Message}{@literal >}
+     * @return {@link RestAction} -
+     *         Type: {@link List}{@literal <}{@link Message}{@literal >}
      *         <br>Retrieved Messages are placed in a List and provided in order of most recent to oldest with most recent
      *         starting at index 0. If the list is empty, there were no more messages left to retrieve.
      */
@@ -270,7 +269,11 @@ public class MessageHistory {
 
         Route.CompiledRoute route = Route.Messages.GET_MESSAGE_HISTORY
                 .compile(channel.getId())
-                .withQueryParams("limit", Integer.toString(amount), "after", String.valueOf(history.firstKey()));
+                .withQueryParams(
+                        "limit",
+                        Integer.toString(amount),
+                        "after",
+                        String.valueOf(history.firstEntry().getKey()));
         JDAImpl jda = (JDAImpl) getJDA();
         return new RestActionImpl<>(jda, route, (response, request) -> {
             EntityBuilder builder = jda.getEntityBuilder();
@@ -287,7 +290,7 @@ public class MessageHistory {
 
             for (int i = messages.size() - 1; i >= 0; i--) {
                 Message m = messages.get(i);
-                history.put(0, m.getIdLong(), m);
+                history.putFirst(m.getIdLong(), m);
             }
 
             return messages;
@@ -297,7 +300,7 @@ public class MessageHistory {
     /**
      * The List of Messages, sorted starting from newest to oldest, of all message that have already been retrieved
      * from Discord with this MessageHistory object using the {@link #retrievePast(int)}, {@link #retrieveFuture(int)}, and
-     * {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAround(String, int)} methods.
+     * {@link MessageChannel#getHistoryAround(String, int)} methods.
      *
      * <p>This will be empty if it was just created using {@link MessageChannel#getHistory()} or similar
      * methods. You first have to retrieve messages.
@@ -309,11 +312,11 @@ public class MessageHistory {
     public List<Message> getRetrievedHistory() {
         int size = size();
         if (size == 0) {
-            return Collections.emptyList();
+            return List.of();
         } else if (size == 1) {
-            return Collections.singletonList(history.getValue(0));
+            return List.of(history.firstEntry().getValue());
         }
-        return Collections.unmodifiableList(new ArrayList<>(history.values()));
+        return List.copyOf(history.values());
     }
 
     /**
@@ -327,9 +330,9 @@ public class MessageHistory {
      * @param  id
      *         The id of the requested Message.
      *
-     * @throws java.lang.IllegalArgumentException
+     * @throws IllegalArgumentException
      *         If the provided {@code id} is null or empty.
-     * @throws java.lang.NumberFormatException
+     * @throws NumberFormatException
      *         If the provided {@code id} cannot be parsed by {@link Long#parseLong(String)}
      *
      * @return Possibly-null Message with the same {@code id} as the one provided.
@@ -358,11 +361,11 @@ public class MessageHistory {
     }
 
     /**
-     * Constructs a {@link net.dv8tion.jda.api.entities.MessageHistory MessageHistory} with the initially retrieved history
+     * Constructs a {@link MessageHistory} with the initially retrieved history
      * of messages sent after the mentioned message ID (exclusive).
      * <br>The provided ID need not be valid!
      *
-     * <p>Alternatively you can use {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAfter(String, int) MessageChannel.getHistoryAfter(...)}
+     * <p>Alternatively you can use {@link MessageChannel#getHistoryAfter(String, int) MessageChannel.getHistoryAfter(...)}
      *
      * <p><b>Example</b>
      * <br>{@code MessageHistory history = MessageHistory.getHistoryAfter(channel, messageId).limit(60).complete()}
@@ -376,22 +379,22 @@ public class MessageHistory {
      * }
      *
      * @param  channel
-     *         The {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel MessageChannel}
+     *         The {@link MessageChannel}
      * @param  messageId
      *         The pivot ID to use
      *
-     * @throws java.lang.IllegalArgumentException
+     * @throws IllegalArgumentException
      *         If any of the provided arguments is {@code null};
      *         Or if the provided messageId contains whitespace
-     * @throws net.dv8tion.jda.api.exceptions.InsufficientPermissionException
+     * @throws InsufficientPermissionException
      *         If this is a TextChannel and the currently logged in account does not
-     *         have the permission {@link net.dv8tion.jda.api.Permission#MESSAGE_HISTORY Permission.MESSAGE_HISTORY}
+     *         have the permission {@link Permission#MESSAGE_HISTORY Permission.MESSAGE_HISTORY}
      *
-     * @return {@link net.dv8tion.jda.api.entities.MessageHistory.MessageRetrieveAction MessageRetrieveAction}
+     * @return {@link MessageHistory.MessageRetrieveAction MessageRetrieveAction}
      *
-     * @see    net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAfter(String, int)  MessageChannel.getHistoryAfter(String, int)
-     * @see    net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAfter(long, int)    MessageChannel.getHistoryAfter(long, int)
-     * @see    net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAfter(Message, int) MessageChannel.getHistoryAfter(Message, int)
+     * @see    MessageChannel#getHistoryAfter(String, int)  MessageChannel.getHistoryAfter(String, int)
+     * @see    MessageChannel#getHistoryAfter(long, int)    MessageChannel.getHistoryAfter(long, int)
+     * @see    MessageChannel#getHistoryAfter(Message, int) MessageChannel.getHistoryAfter(Message, int)
      */
     @Nonnull
     @CheckReturnValue
@@ -403,11 +406,11 @@ public class MessageHistory {
     }
 
     /**
-     * Constructs a {@link net.dv8tion.jda.api.entities.MessageHistory MessageHistory} with the initially retrieved history
+     * Constructs a {@link MessageHistory} with the initially retrieved history
      * of messages sent before the mentioned message ID (exclusive).
      * <br>The provided ID need not be valid!
      *
-     * <p>Alternatively you can use {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryBefore(String, int) MessageChannel.getHistoryBefore(...)}
+     * <p>Alternatively you can use {@link MessageChannel#getHistoryBefore(String, int) MessageChannel.getHistoryBefore(...)}
      *
      * <p><b>Example</b>
      * <br>{@code MessageHistory history = MessageHistory.getHistoryBefore(channel, messageId).limit(60).complete()}
@@ -421,22 +424,22 @@ public class MessageHistory {
      * }
      *
      * @param  channel
-     *         The {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel MessageChannel}
+     *         The {@link MessageChannel}
      * @param  messageId
      *         The pivot ID to use
      *
-     * @throws java.lang.IllegalArgumentException
+     * @throws IllegalArgumentException
      *         If any of the provided arguments is {@code null};
      *         Or if the provided messageId contains whitespace
-     * @throws net.dv8tion.jda.api.exceptions.InsufficientPermissionException
+     * @throws InsufficientPermissionException
      *         If this is a TextChannel and the currently logged in account does not
-     *         have the permission {@link net.dv8tion.jda.api.Permission#MESSAGE_HISTORY Permission.MESSAGE_HISTORY}
+     *         have the permission {@link Permission#MESSAGE_HISTORY Permission.MESSAGE_HISTORY}
      *
-     * @return {@link net.dv8tion.jda.api.entities.MessageHistory.MessageRetrieveAction MessageRetrieveAction}
+     * @return {@link MessageHistory.MessageRetrieveAction MessageRetrieveAction}
      *
-     * @see    net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryBefore(String, int)  MessageChannel.getHistoryBefore(String, int)
-     * @see    net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryBefore(long, int)    MessageChannel.getHistoryBefore(long, int)
-     * @see    net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryBefore(Message, int) MessageChannel.getHistoryBefore(Message, int)
+     * @see    MessageChannel#getHistoryBefore(String, int)  MessageChannel.getHistoryBefore(String, int)
+     * @see    MessageChannel#getHistoryBefore(long, int)    MessageChannel.getHistoryBefore(long, int)
+     * @see    MessageChannel#getHistoryBefore(Message, int) MessageChannel.getHistoryBefore(Message, int)
      */
     @Nonnull
     @CheckReturnValue
@@ -448,11 +451,11 @@ public class MessageHistory {
     }
 
     /**
-     * Constructs a {@link net.dv8tion.jda.api.entities.MessageHistory MessageHistory} with the initially retrieved history
+     * Constructs a {@link MessageHistory} with the initially retrieved history
      * of messages sent around the mentioned message ID (inclusive).
      * <br>The provided ID need not be valid!
      *
-     * <p>Alternatively you can use {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAround(String, int) MessageChannel.getHistoryAround(...)}
+     * <p>Alternatively you can use {@link MessageChannel#getHistoryAround(String, int) MessageChannel.getHistoryAround(...)}
      *
      * <p><b>Example</b>
      * <br>{@code MessageHistory history = MessageHistory.getHistoryAround(channel, messageId).limit(60).complete()}
@@ -466,22 +469,22 @@ public class MessageHistory {
      * }
      *
      * @param  channel
-     *         The {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel MessageChannel}
+     *         The {@link MessageChannel}
      * @param  messageId
      *         The pivot ID to use
      *
-     * @throws java.lang.IllegalArgumentException
+     * @throws IllegalArgumentException
      *         If any of the provided arguments is {@code null};
      *         Or if the provided messageId contains whitespace
-     * @throws net.dv8tion.jda.api.exceptions.InsufficientPermissionException
+     * @throws InsufficientPermissionException
      *         If this is a TextChannel and the currently logged in account does not
-     *         have the permission {@link net.dv8tion.jda.api.Permission#MESSAGE_HISTORY Permission.MESSAGE_HISTORY}
+     *         have the permission {@link Permission#MESSAGE_HISTORY Permission.MESSAGE_HISTORY}
      *
-     * @return {@link net.dv8tion.jda.api.entities.MessageHistory.MessageRetrieveAction MessageRetrieveAction}
+     * @return {@link MessageHistory.MessageRetrieveAction MessageRetrieveAction}
      *
-     * @see    net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAround(String, int)  MessageChannel.getHistoryAround(String, int)
-     * @see    net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAround(long, int)    MessageChannel.getHistoryAround(long, int)
-     * @see    net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryAround(Message, int) MessageChannel.getHistoryAround(Message, int)
+     * @see    MessageChannel#getHistoryAround(String, int)  MessageChannel.getHistoryAround(String, int)
+     * @see    MessageChannel#getHistoryAround(long, int)    MessageChannel.getHistoryAround(long, int)
+     * @see    MessageChannel#getHistoryAround(Message, int) MessageChannel.getHistoryAround(Message, int)
      */
     @Nonnull
     @CheckReturnValue
@@ -493,27 +496,27 @@ public class MessageHistory {
     }
 
     /**
-     * Constructs a {@link net.dv8tion.jda.api.entities.MessageHistory MessageHistory} with the initially retrieved history
+     * Constructs a {@link MessageHistory} with the initially retrieved history
      * of messages sent.
      *
-     * <p>Alternatively you can use {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryFromBeginning(int) MessageChannel.getHistoryFromBeginning(...)}
+     * <p>Alternatively you can use {@link MessageChannel#getHistoryFromBeginning(int) MessageChannel.getHistoryFromBeginning(...)}
      *
      * <p><b>Example</b><br>
      * <br>{@code MessageHistory history = MessageHistory.getHistoryFromBeginning(channel).limit(60).complete()}
-     * <br>Will return a MessageHistory instance with the first 60 messages of the given {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel MessageChannel}.
+     * <br>Will return a MessageHistory instance with the first 60 messages of the given {@link MessageChannel}.
      *
      * @param  channel
-     *         The {@link net.dv8tion.jda.api.entities.channel.middleman.MessageChannel MessageChannel}
+     *         The {@link MessageChannel}
      *
-     * @throws java.lang.IllegalArgumentException
+     * @throws IllegalArgumentException
      *         If the provided MessageChannel is {@code null};
-     * @throws net.dv8tion.jda.api.exceptions.InsufficientPermissionException
+     * @throws InsufficientPermissionException
      *         If this is a TextChannel and the currently logged in account does not
-     *         have the permission {@link net.dv8tion.jda.api.Permission#MESSAGE_HISTORY Permission.MESSAGE_HISTORY}
+     *         have the permission {@link Permission#MESSAGE_HISTORY Permission.MESSAGE_HISTORY}
      *
-     * @return {@link net.dv8tion.jda.api.entities.MessageHistory.MessageRetrieveAction MessageRetrieveAction}
+     * @return {@link MessageHistory.MessageRetrieveAction MessageRetrieveAction}
      *
-     * @see    net.dv8tion.jda.api.entities.channel.middleman.MessageChannel#getHistoryFromBeginning(int)  MessageChannel.getHistoryFromBeginning(int)
+     * @see    MessageChannel#getHistoryFromBeginning(int)  MessageChannel.getHistoryFromBeginning(int)
      */
     @Nonnull
     @CheckReturnValue
@@ -553,7 +556,7 @@ public class MessageHistory {
          * @param  limit
          *         The limit to use, or {@code null} to use default 50
          *
-         * @throws java.lang.IllegalArgumentException
+         * @throws IllegalArgumentException
          *         If the provided limit is not between 1-100
          *
          * @return The current MessageRetrieveAction for chaining convenience
