@@ -19,7 +19,6 @@ package net.dv8tion.jda.api.utils;
 import net.dv8tion.jda.internal.utils.Checks;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 
@@ -136,7 +135,7 @@ public class SplitUtil {
     public static List<String> split(@Nonnull String input, int limit, boolean trim, @Nonnull Strategy... strategies) {
         Checks.notNull(input, "Input string");
         if (input.isEmpty() || input.length() <= limit) {
-            return Collections.singletonList(input);
+            return List.of(input);
         }
         if (strategies.length == 0) {
             strategies = new Strategy[] {Strategy.ANYWHERE};
